# FASTLIO-Offroad-Sim

./: .gitignore  README.md  dependencies.repos
about_octomap/: README.md  temp.cpp
setup/: fastlio_sim.launch.py  launch_inspection.launch.py  launch_sim.launch.py  robot.srdf  robot.urdf.xacro  robot.yaml  simulation_with_fastlio.launch.py
setup/platform/config/: control.yaml  imu_filter.yaml  localization.yaml  teleop_joy.yaml
setup/sensors/config/: imu_0.yaml  lidar3d_0.yaml
setup/sensors/launch/: camera_0.launch.py  imu_0.launch.py  lidar3d_0.launch.py  sensors-service.launch.py
src/FAST_LIO_ROS2/: CMakeLists.txt
src/FAST_LIO_ROS2/config/: nav2_octomap_params.yaml  velodyne_simulation.yaml
src/FAST_LIO_ROS2/launch/: fastlio_elevation_sim.launch.py  fastlio_groundgrid_sim.launch.py  fastlio_nav2_sim.launch.py  fastlio_octomap_sim.launch.py  fastlio_sim.launch.py  mapping_simulation.launch.py  nav2.launch.py  navigation.launch.py  octomap.launch.py
src/FAST_LIO_ROS2/rviz/: fastlio.rviz  fastlio_groundgrid.rviz  fastlio_octomap.rviz
src/FAST_LIO_ROS2/src/: README.md  elevation_mapping_node.cpp  laserMapping.cpp  preprocess.h
src/clearpath_common/clearpath_platform_description/urdf/a200/: a200.urdf.xacro
src/clearpath_common/clearpath_sensors_description/urdf/: velodyne_lidar.urdf.xacro
src/clearpath_config/clearpath_config/sample/: sensors_server.config
src/clearpath_simulator/clearpath_gz/config/setup/manipulators/config/: moveit.yaml
src/clearpath_simulator/clearpath_gz/config/setup/platform/config/: localization.yaml  teleop_interactive_markers.yaml  twist_mux.yaml
src/clearpath_simulator/clearpath_gz/config/setup/platform/launch/: platform-service.launch.py
src/clearpath_simulator/clearpath_gz/config/setup/sensors/config/: camera_0.yaml
src/clearpath_simulator/clearpath_gz/config/setup/sensors/launch/: imu_0.launch.py  lidar3d_0.launch.py  sensors-service.launch.py
src/clearpath_simulator/clearpath_gz/launch/: launch_sim.launch.py
src/clearpath_simulator/clearpath_gz/worlds/: inspection.sdf  inspection_baseline.sdf  pipeline.sdf
src/cpr_gazebo/cpr_inspection_gazebo/worlds/: inspection.sdf  inspection_baseline.sdf
src/groundgrid/: CMakeLists.txt
src/groundgrid/include/groundgrid/: GroundGrid.hpp  GroundSegmentation.hpp
src/groundgrid/launch/: GroundGrid.launch.py  Live.launch.py
src/groundgrid/param/: M300.yaml  helipr_avia.yaml
src/groundgrid/src/: GroundGridNode.cpp  GroundSegmentation.cpp  README.md
